Add support for Java 9 classloaders (but not modules)